# rumors

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN-shared-state.md  README.md  justfile
benches/: branch_hash.rs  gossip_fixed.rs  gossip_grid.rs  hash_recon.rs  in_memory.rs  tree.rs
crates/before/: CLAUDE.md  Cargo.toml  README.md
crates/before-viz/: .gitignore  Cargo.toml  README.md
crates/before-viz/proptest-regressions/: tests.txt
crates/before-viz/src/: lib.rs  oplog.rs  tests.rs
crates/before-viz/www/: package-lock.json  package.json
crates/before-viz/www/src/: engine.ts  main.ts  notation.ts  view.ts
crates/before/benches/: clock.rs  party.rs  version.rs
crates/before/benches/common/: mod.rs
crates/before/examples/: space_consumption.rs
crates/before/fuzz/: Cargo.toml  README.md
crates/before/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_ops.rs
crates/before/fuzz/seeds/fuzz_decode/: version_nested
crates/before/fuzz/seeds/fuzz_decode_ops/: clock_then_msg  clock_then_ops
crates/before/proptest-regressions/clock/: tests.txt
crates/before/proptest-regressions/version/: tests.txt
crates/before/results/benchmarks/: README.md  speedup.csv  speedup.md
crates/before/results/space_consumption/: README.md  space.csv
crates/before/scripts/: plot_benchmarks.py  plot_space_consumption.py
crates/before/src/: borsh_impls.rs  causally.rs  clock.rs  codec.rs  error.rs  idbits.rs  lib.rs  oracle.rs  party.rs  recurse.rs  serde_impls.rs  testing.rs  version.rs
crates/before/src/borsh_impls/: tests.rs
crates/before/src/causally/: tests.rs
crates/before/src/clock/: batch.rs  forks.rs  tests.rs
crates/before/src/codec/: base.rs  bits.rs  cursor.rs  display.rs  gamma.rs  literal.rs  mod.rs  tests.rs  text.rs  tree.rs
crates/before/src/oracle/: clock.rs  party.rs  tests.rs  version.rs
crates/before/src/party/: forks.rs  ops.rs  tests.rs
crates/before/src/party/ops/: build.rs  compare.rs  diff.rs  mod.rs  split.rs  sum.rs
crates/before/src/testing/: algebraic_laws.rs  bridge.rs  complexity.rs  exhaustive.rs  generators.rs  grow_brute_force.rs  metrics.rs  mod.rs  optrace.rs  semantic_oracle.rs  snapshots.rs
crates/before/src/testing/algebraic_laws/: tests.rs
crates/before/src/testing/exhaustive/: tests.rs
crates/before/src/testing/semantic_oracle/: tests.rs
crates/before/src/version/: area.rs  batch.rs  compare.rs  event.rs  rank.rs  ranked.rs  tests.rs  working.rs
crates/before/src/version/event/: builder.rs  combine.rs  fill.rs  grow.rs  join.rs  max.rs  min_ticks.rs  mod.rs  project.rs
crates/before/tests/: compile_fail.rs
crates/before/tests/ui/: clock_borrow_bitor.rs  clock_borrow_bitor.stderr  clock_into_empty_array.rs  clock_into_empty_array.stderr  clock_use_after_move.rs  clock_use_after_move.stderr  clone_clock.rs  clone_clock.stderr  clone_party.rs  clone_party.stderr  party_into_empty_array.rs  party_into_empty_array.stderr
crates/before/tests/ui/pass/: array_split.rs
crates/itc/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  REVIEW_FINDINGS.md  STYLE_REVIEW.md
crates/itc-viz/: Cargo.toml  README.md  build.sh
crates/itc-viz/proptest-regressions/: tests.txt
crates/itc-viz/src/: lib.rs  oplog.rs  tests.rs
crates/itc-viz/www/: index.html  package-lock.json  package.json  style.css  tsconfig.json
crates/itc-viz/www/src/: animate.ts  dag.ts  engine.ts  glyph.ts  input.ts  layout.ts  main.ts  oplog.ts  render.ts  types.ts  view.ts
crates/itc/benches/: clock.rs  party.rs  version.rs
crates/itc/benches/common/: mod.rs
crates/itc/fuzz/: Cargo.toml  README.md
crates/itc/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_ops.rs
crates/itc/proptest-regressions/codec/: tests.txt
crates/itc/proptest-regressions/party/: tests.txt
crates/itc/proptest-regressions/testing/semantic_oracle/: tests.txt
crates/itc/reference/: itc2008.md  itc2008.raw.txt  itc2008.txt
crates/itc/src/: algebraic_laws.rs  clock.rs  codec.rs  error.rs  exhaustive.rs  idbits.rs  lib.rs  metrics.rs  oracle.rs  party.rs  prog3_exhaustive.rs  prog6_laws.rs  sampling_oracle.rs  serde_impls.rs  snapshots_doc.rs  test_support.rs  version.rs
crates/itc/src/algebraic_laws/: tests.rs
crates/itc/src/clock/: tests.rs
crates/itc/src/codec/: base.rs  bits.rs  display.rs  gamma.rs  literal.rs  mod.rs  tests.rs  text.rs  tree.rs
crates/itc/src/exhaustive/: tests.rs
crates/itc/src/oracle/: tests.rs
crates/itc/src/party/: ops.rs  tests.rs
crates/itc/src/party/ops/: build.rs  compare.rs  mod.rs  split.rs  sum.rs
crates/itc/src/prog3_exhaustive/: tests.rs
crates/itc/src/prog6_laws/: tests.rs
crates/itc/src/sampling_oracle/: tests.rs
crates/itc/src/testing/: algebraic_laws.rs  bridge.rs  complexity.rs  exhaustive.rs  generators.rs  grow_brute_force.rs  metrics.rs  mod.rs  optrace.rs  sampling_oracle.rs  semantic_oracle.rs  snapshots.rs
crates/itc/src/testing/algebraic_laws/: tests.rs
crates/itc/src/testing/exhaustive/: tests.rs
crates/itc/src/testing/sampling_oracle/: tests.rs
crates/itc/src/testing/semantic_oracle/: tests.rs
crates/itc/src/version/: compare.rs  event.rs  tests.rs  working.rs
crates/itc/src/version/event/: builder.rs  fill.rs  grow.rs  join.rs  max.rs  mod.rs
crates/itc/tests/: compile_fail.rs
crates/itc/tests/ui/: clock_borrow_bitor.rs  clock_borrow_bitor.stderr  clock_use_after_move.rs  clock_use_after_move.stderr  clone_clock.rs  clone_clock.stderr  clone_party.rs  clone_party.stderr
crates/rumormill/: Cargo.toml
crates/rumormill/src/: causal.rs  cli.rs  entry.rs  main.rs  net.rs  owner.rs  state.rs  timers.rs  trace.rs  ui.rs  view.rs
crates/rumormill/src/causal/: tests.rs
crates/rumormill/src/entry/: tests.rs
crates/rumormill/src/net/: tests.rs
crates/rumormill/src/owner/: tests.rs
crates/rumormill/src/state/: tests.rs
design/: eager-absorption.md  mux-latency.md  parent-placement.md  single-socket-plan.md  single-socket.md  tracecheck.md
examples/: network_profile.rs  swarm.rs
formal/: AUDIT-NOTES.md  MODEL.md  MUX-ADJUDICATION.md  MUX-LATENCY.md  MUX-PROGRESS.md  (+6 more)
(+601 files in other folders)
