[workspace]
members = ["crates/before", "crates/before-viz"]

[package]
name = "rumors"
version = "0.1.0"
edition = "2024"

[features]
proptest = ["dep:proptest"]

[dependencies]
proptest = { version = "1", optional = true }
before = { path = "crates/before", features = ["borsh"] }
imbl = "7"
bytes = "1"
blake3 = "1.8"
static_assertions = "1.1"
itertools = "0.14"
borsh = { version = "1.6", features = ["bytes", "derive", "de_strict_order"] }
seq-macro = "0.3"
tinyvec = { version = "1.11", features = ["alloc"] }
thiserror = "2.0"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec", "compat"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
pollster = "0.4"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.47"
tokio = { version = "1", features = ["rt", "macros", "io-util", "net"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
arc-swap = "1"
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
ratatui = "0.30"

[profile.dev]
debug = "line-tables-only"

[[example]]
name = "network_profile"
path = "examples/network_profile.rs"

[[example]]
name = "swarm"
path = "examples/swarm.rs"

[[bench]]
name = "hash_recon"
harness = false

[[bench]]
name = "in_memory"
harness = false

[[bench]]
name = "gossip_grid"
harness = false

[[bench]]
name = "branch_hash"
harness = false
