[package]
name = "before-viz"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "WASM replay engine for the interactive Interval Tree Clocks visualizer."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
before = { path = "../before" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
proptest = "1"
