[package]
name = "before"
version = "0.1.0"
edition = "2021"
description = "Interval Tree Clocks (Almeida, Baquero & Fonte, 2008): packed BitVec storage, transient fixed-width working form, linear-typed API."
license = "MPL-2.0"

[dependencies]
bitvec = "1"
num-bigint = "0.4.6"
# Stack-growth guard for the recursive traversals: recurse natively on shallow
# trees; grow the stack onto the heap before a deep one can overflow. The crate
# stays `#![forbid(unsafe_code)]`; the platform stack manipulation lives here.
stacker = "0.1"
thiserror = "2"
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
criterion = "0.5"
rand = "0.8"
# Binary (non-self-describing) and self-describing serde formats, exercised by the
# binary-serde round-trip tests: `postcard` emits a typed bytes value via `serialize_bytes`;
# `ciborium` is a self-describing CBOR codec. Together they guard the binary serde path
# that `serde_json` alone never reaches.
postcard = { version = "1", features = ["use-std"] }
ciborium = "0.2"
# Compile-fail tests pinning the linearity guarantees (`Party`/`Clock` `!Clone`,
# by-value `BitOr`).
trybuild = "1"
# Snapshot tests where a literal expected value is clearer inline than maintained by hand.
insta = "1"
# Parallelizes the exhaustive small-scope cross-products (the `exhaustive` module).
rayon = "1"
# Self-dependency that turns on the `oracle` feature for benches (and tests): a
# recognized Cargo idiom so `cargo bench` builds the lib with the oracle exposed
# without needing `--features oracle`. Dev-dependency cycles are explicitly allowed,
# and dev-dependencies never affect a normal `cargo build`, so production stays clean.
before = { path = ".", features = ["oracle"] }

[features]
default = []
serde = ["dep:serde"]
# Re-exports the reference oracle (`src/oracle.rs`) as `before::oracle`, so the benchmark
# suite can time it against the optimized implementation. Bench/test-only.
oracle = []

[[bench]]
name = "party"
harness = false

[[bench]]
name = "version"
harness = false

[[bench]]
name = "clock"
harness = false
