# Standalone fuzz workspace (PROG-5 / COV-7). The empty `[workspace]` table detaches
# this crate from the parent `rumors` workspace, so the before clippy/nextest gate never
# tries to build it (it needs nightly + libFuzzer). Build/run with cargo-fuzz only:
#   cargo +nightly fuzz build
#   cargo +nightly fuzz run fuzz_decode -- -max_total_time=20
#   cargo +nightly fuzz run fuzz_decode_ops -- -max_total_time=20
[workspace]

[package]
name = "before-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.before]
path = ".."

# Decode-only target: feed arbitrary bytes to every top-level `decode`. Asserts the
# keystone invariant (COV-7) inline — an accepted value re-encodes stably and decodes
# back to itself — so a non-canonical accept is a fuzzer crash, not a silent pass.
[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

# Decode-then-operate target: decode a `Clock` (or `Version`) from the input, then drive
# the full op set (tick/fork/join/sync/send/receive + observers) so the working-form
# arithmetic and repack run on adversarially-shaped trees, not just op-generated ones.
[[bin]]
name = "fuzz_decode_ops"
path = "fuzz_targets/fuzz_decode_ops.rs"
test = false
doc = false
bench = false
